feat(ClientHandler): refactor to use ServerRuntime for dependency injection and enhance request handling